@@ -1,4 +1,4 @@
-setMethod("plotMeanCoverage",signature(cover='RleList', x='RangedData'), function(cover, x, upstreambp=1000, downstreambp=5000, startpos='start_position', endpos='end_position', normalize=FALSE, main='', xlab='(bp)', ylab='Average coverage', ...) {
+setMethod("plotMeanCoverage",signature(cover='RleList', x='RangedData'), function(cover, x, upstreambp=1000, downstreambp=5000, startpos='start_position', endpos='end_position', normalize=FALSE, smooth=FALSE, span=0.05, main='', xlab='(bp)', ylab='Average coverage', ...) {
   sp <- x[['space']]; st <- x[[startpos]]; en <- x[[endpos]]
   #Remove missings
   sel <- !is.na(st) & !is.na(en)
@@ -12,7 +12,8 @@ setMethod("plotMeanCoverage",signature(cover='RleList', x='RangedData'), functio
   if (any(sel)) {
     rcovpos <- regionsCoverage(chr=sp[sel],start=st[sel],end=en[sel],cover=cover)
     matpos <- viewApply(rcovpos$views, FUN=fpos, simplify=TRUE)
-    matpos <- matpos[sapply(matpos,length)>0]
+    matpos <- as.list(matpos)
+    matpos <- matpos[sapply(matpos,ncol)>0]
     matpos <- do.call(cbind,as.list(matpos))
   } else {
     matpos <- matrix(ncol=0,nrow=upstreamdb+downstreamdb)
@@ -20,14 +21,21 @@ setMethod("plotMeanCoverage",signature(cover='RleList', x='RangedData'), functio
   if (any(!sel)) {
     rcovneg <- regionsCoverage(chr=sp[!sel],start=st[!sel],end=en[!sel],cover=cover)
     matneg <- viewApply(rcovneg$views, FUN=fneg, simplify=TRUE)
+    matneg <- as.list(matneg)
     matneg <- matneg[sapply(matneg,length)>0]
     matneg <- do.call(cbind,as.list(matneg))
   } else {
     matneg <- matrix(ncol=1,nrow=upstreamdb+downstreamdb)
   }
   #Format coverage as matrix
-  x2plot <- rowMeans(cbind(matpos,matneg))
-  if (normalize) x2plot <- x2plot/mean(x2plot)
-  plot(-upstreambp:(downstreambp-1),x2plot,type='l',main=main,xlab=xlab,ylab=ylab,...)
+  x2plot <- -upstreambp:(downstreambp-1)
+  y2plot <- rowMeans(cbind(matpos,matneg))
+  if (normalize) y2plot <- y2plot/mean(y2plot)
+  if (smooth) {
+    fit <- loess(y2plot~x2plot, span=span, degree=2)
+    x2plot <- fit$x
+    y2plot <- fit$fitted
+  }                      
+  plot(x2plot,y2plot,type='l',main=main,xlab=xlab,ylab=ylab,...)
 }
 )
